--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,3 +2,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
+.question {
+    font-size:25mm;
+    margin-top: 10vh;
+}
+.answer {
+    font-size:10mm;
+    width: 80%;
+    max-width: 400px;
+    margin-top: 10vh;
+    text-align: center;
+}
