--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,14 @@ body {
     font-size:25mm;
     margin-top: 10vh;
 }
+.indicator {
+    font-size: 30px;
+}
 .answer {
-    font-size:10mm;
+    font-size:8mm;
     width: 80%;
+    margin-top: 5vh;
     max-width: 400px;
-    margin-top: 10vh;
     text-align: center;
+    margin-bottom: 5vh;
 }
